# nifi-oilgas-monitoring

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  promote-prod.yml  promote-staging.yml
data-generator/: Dockerfile  pyproject.toml  requirements.txt
data-generator/src/: config.py  main.py
data-generator/src/generators/: __init__.py  csv_batch.py  mqtt_publisher.py  rest_publisher.py
data-generator/src/models/: __init__.py  equipment.py  platform.py  reading.py  sensor.py
data-generator/src/patterns/: __init__.py  signal.py
diagrams/: architecture-complete.excalidraw  architecture-overview.excalidraw  data-flow.excalidraw  generate_diagrams.py  nifi-process-groups.excalidraw  observability-stack.excalidraw  security-architecture.excalidraw
docker/alertmanager/: alertmanager.yml
docker/kafka/: create-topics.sh  kafka_server_jaas.conf
docker/mosquitto/: mosquitto.conf
docker/nifi/: Dockerfile
docker/prometheus/: alert-rules.yml  prometheus.yml
docker/schema-registry/: register-schemas.sh
docs/: ARCHITECTURE.md
nifi-flows/bootstrap/: controller-services.json  (+12 more)
nifi-python-processors/: MovingAverageDetector.py  RateOfChangeDetector.py  ThresholdDetector.py
schemas/: anomaly-alert.avsc  compliance-emission.avsc  equipment-status.avsc  sensor-enriched.avsc  sensor-reading.avsc  sensor-validated.avsc
scripts/: backup.sh  health-check.sh  promote.sh  restore.sh  setup.sh  start.sh  stop.sh
tests/: conftest.py
(+25 files in other folders)
